// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-inline-alert #render should render component as expected (1) 1`] = `
<gux-inline-alert accent="info">
  <template shadowrootmode="open">
    <div class="gux-info gux-inline-alert">
      <div class="gux-message-wrapper">
        <gux-icon decorative="" icon-name="fa/circle-info-solid"></gux-icon>
        <div class="gux-sr-only">
          Information alert with message
        </div>
        <div class="gux-content">
          <slot name="content">
            <slot></slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is an information alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render should render component as expected (2) 1`] = `
<gux-inline-alert accent="success">
  <template shadowrootmode="open">
    <div class="gux-inline-alert gux-success">
      <div class="gux-message-wrapper">
        <gux-icon decorative="" icon-name="fa/circle-check-solid"></gux-icon>
        <div class="gux-sr-only">
          Success alert with message
        </div>
        <div class="gux-content">
          <slot name="content">
            <slot></slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a success alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render should render component as expected (3) 1`] = `
<gux-inline-alert accent="warning">
  <template shadowrootmode="open">
    <div class="gux-inline-alert gux-warning">
      <div class="gux-message-wrapper">
        <gux-icon decorative="" icon-name="fa/triangle-exclamation-solid"></gux-icon>
        <div class="gux-sr-only">
          Warning alert with message
        </div>
        <div class="gux-content">
          <slot name="content">
            <slot></slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a warning alert.
  </div>
</gux-inline-alert>
`;

exports[`gux-inline-alert #render should render component as expected (4) 1`] = `
<gux-inline-alert accent="error">
  <template shadowrootmode="open">
    <div class="gux-error gux-inline-alert">
      <div class="gux-message-wrapper">
        <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
        <div class="gux-sr-only">
          Error alert with message
        </div>
        <div class="gux-content">
          <slot name="content">
            <slot></slot>
          </slot>
        </div>
      </div>
    </div>
  </template>
  <div slot="content">
    Note: This is a warning alert.
  </div>
</gux-inline-alert>
`;
